# FBX2glTF

./: .gitignore  .gitmodules  CMakeLists.txt  FindFBX.cmake
src/: FBX2glTF.cpp  FBX2glTF.h  pch.h
src/fbx/: Fbx2Raw.cpp  FbxBlendShapesAccess.hpp  FbxSkinningAccess.cpp  FbxSkinningAccess.hpp
src/fbx/materials/: FbxMaterials.hpp  RoughnessMetallicMaterials.hpp
src/gltf/: Raw2Gltf.cpp  TextureBuilder.cpp
src/gltf/properties/: MaterialData.cpp  NodeData.cpp  NodeData.hpp  PrimitiveData.hpp
src/raw/: RawModel.cpp  RawModel.hpp
src/utils/: File_Utils.cpp  File_Utils.hpp
